--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@ layout: null
 section-type: contact
 title: Contact
 ---
-## Contact
+## 社交资料
 
-Drop me an email if you are interested in me coding for you or saving your neighborhood!
+Feel free to drop me an email!
+
